...
        NavigationView {
            Form {
                Section {
                    if editMode != .active {
                        Text(name).font(.title).bold()
                    } else {
                        TextField("Name", text: $name)
                            .submitLabel(.done)
                            .font(.title)
                            .focused($focused)
                            .clearButton(text: $name, focused: $focused)
                    }
                } header: {
...
                    }
                }
            }
            .environment(\.editMode, $editMode)
        }
        .alert("destlist.destruct.title", isPresented: $alertingDestruct) {
            Button("Delete", role: .destructive) {
                name = ""
                note = ""
                DestinationSet.current.name = nil
                DestinationSet.current.note = nil
                DestinationSet.current.destinations = []
                try? DestinationSet.saveAll()
...
